--- a/FinalWebA/app/src/main/res/layout/fragment_notify.xml
+++ b/FinalWebA/app/src/main/res/layout/fragment_notify.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.scwang.smartrefresh.layout.SmartRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/refreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.notify.NotifyFragment">
 
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recyclerView_notifyFrg"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_notifyFrg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
-</LinearLayout>
+</com.scwang.smartrefresh.layout.SmartRefreshLayout>
